# sh-autocomplete

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN-cold-start-and-hybrid-cd.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  shell_integration_feedback.yml  ux_feedback.yml
.github/workflows/: audit.yml  bottle.yml  ci.yml  pages.yml  release.yml
Formula/: shac.rb
docs/: index.html  styles.css
docs/superpowers/plans/: 2026-04-28-shac-discoverability.md
docs/superpowers/specs/: 2026-04-28-shac-discoverability-design.md
locales/: en.toml
shell/bash/: shac.bash
shell/fish/: shac.fish
shell/zsh/: shac.zsh
src/: config.rs  context.rs  db.rs  engine.rs  i18n.rs  import.rs  indexer.rs  lib.rs  ml.rs  priors.rs  profiles.rs  protocol.rs  shell.rs  suggest.rs  tips.rs  tools.rs
tests/: base_pr_smoke.rs  beta_cli.rs  bg_indexer.rs  cli_integration.rs  cold_start_import.rs  fish_syntax.rs  git_branch.rs  hybrid_cd.rs  image_collector.rs  import_cli.rs  index_cli.rs  install_tool_filter.rs  locale.rs  priors_install.rs  profiles.rs  ranking_regression.rs  resource_collector.rs  script_collector.rs  ssh_host_collector.rs  suggest.rs  target_collector.rs  tips.rs  workspace_collector.rs  zsh_functions.rs  zsh_pty.rs  zsh_render.sh
tests/support/: mod.rs
tools/: generate_web_assets.mjs
