[package]
name = "shac"
version = "0.1.3"
edition = "2021"
description = "Shell autocomplete engine for bash and zsh"
license = "MIT"

[lib]
name = "shac"
path = "src/lib.rs"

[[bin]]
name = "shac"
path = "src/bin/shac.rs"

[[bin]]
name = "shacd"
path = "src/bin/shacd.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
